[package]
name = "wslpath-ext"
version = "0.0.1"
authors = ["anccerson <xplusxen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wslpath_ext"
path = "src/wslpath_ext.rs"

[dependencies]

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
criterion = "0.3"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
